--- a/README
+++ b/README
@@ -1,85 +1,66 @@
 <div align="center">
-  <h1><img src="https://gocartshop.in/favicon.ico" width="20" height="20" alt="GoCart Favicon">
-   GoCart</h1>
+  <h1><img src="https://leafylane-client.vercel.app/favicon.png" width="20" height="20" alt="LeafyLane Favicon">LeafyLane</h1>
   <p>
-    An open-source multi-vendor e-commerce platform built with Next.js and Tailwind CSS.
-  </p>
-  <p>
-    <a href="https://github.com/GreatStackDev/goCart/blob/main/LICENSE.md"><img src="https://img.shields.io/github/license/GreatStackDev/goCart?style=for-the-badge" alt="License"></a>
-    <a href="https://github.com/GreatStackDev/goCart/pulls"><img src="https://img.shields.io/badge/PRs-welcome-brightgreen.svg?style=for-the-badge" alt="PRs Welcome"></a>
-    <a href="https://github.com/GreatStackDev/goCart/issues"><img src="https://img.shields.io/github/issues/GreatStackDev/goCart?style=for-the-badge" alt="GitHub issues"></a>
+    Full Stack Grocery Delivery Website build using MERN stack.
   </p>
 </div>
 
 ---
 
-## 📖 Table of Contents
+# Table of Contents
 
-- [✨ Features](#-features)
-- [🛠️ Tech Stack](#-tech-stack)
-- [🚀 Getting Started](#-getting-started)
-- [🤝 Contributing](#-contributing)
-- [📜 License](#-license)
-
----
-
-## Features
-
-- **Multi-Vendor Architecture:** Allows multiple vendors to register, manage their own products, and sell on a single platform.
-- **Customer-Facing Storefront:** A beautiful and responsive user interface for customers to browse and purchase products.
-- **Vendor Dashboards:** Dedicated dashboards for vendors to manage products, view sales analytics, and track orders.
-- **Admin Panel:** A comprehensive dashboard for platform administrators to oversee vendors, products, and commissions.
-
-## 🛠️ Tech Stack <a name="-tech-stack"></a>
-
-- **Framework:** Next.js
-- **Styling:** Tailwind CSS
-- **UI Components:** Lucide React for icons
-- **State Management:** Redux Toolkit
-
-## 🚀 Getting Started <a name="-getting-started"></a>
-
-First, install the dependencies. We recommend using `npm` for this project.
-
-```bash
-npm install
-```
-
-Then, run the development server:
-
-```bash
-npm run dev
-# or
-yarn dev
-# or
-pnpm dev
-# or
-bun dev
-```
-
-Open [http://localhost:3000](http://localhost:3000) with your browser to see the result.
-
-You can start editing the page by modifying `app/(public)/page.js`. The page auto-updates as you edit the file.
-
-This project uses [`next/font`](https://nextjs.org/docs/app/building-your-application/optimizing/fonts) to automatically optimize and load [Outfit](https://vercel.com/font), a new font family for Vercel.
+- Features
+- Tech Stack
+- Screenshots
+- Credentials
 
 ---
 
-## 🤝 Contributing <a name="-contributing"></a>
+# Features
 
-We welcome contributions! Please see our [CONTRIBUTING.md](./CONTRIBUTING.md) for more details on how to get started.
+- 🧑‍💼 User authentication (Email/Password or Google OAuth via Passport.js)
+- 🛠️ Profile update support
+- 🛍️ Browse and filter products by category
+- 🔍 Product search functionality
+- 🛒 Add/remove items from the cart
+- 💳 Two payment methods: **Stripe** (online) or **Cash on Delivery**
+- 📦 Admin dashboard for order and product management (WIP/future scope)
+- ☁️ Image upload with **Cloudinary**
 
 ---
 
-## 📜 License <a name="-license"></a>
+# Tech Stack
 
-This project is licensed under the MIT License. See the [LICENSE.md](./LICENSE.md) file for details.
+- **Frontend**: React, Tailwind CSS, Axios, React Router DOM
+- **Backend**: Node.js, Express, MongoDB (Mongoose)
+- **Authentication**: Passport.js (with Google OAuth)
+- **Payments**: Stripe API (with webhook support)
+- **Media Hosting**: Cloudinary
+- **Deployment**: Vercel (frontend), Render (or local for backend)
 
-## Learn More
+---
 
-To learn more about Next.js, take a look at the following resources:
+# Screenshots
 
-- [Next.js Documentation](https://nextjs.org/docs) - learn about Next.js features and API.
-- [Learn Next.js](https://nextjs.org/learn) - an interactive Next.js tutorial.
+# SchedRx client side
+<img width="1899" height="916" alt="Screenshot 2025-09-15 122848" src="https://github.com/user-attachments/assets/24499958-5e25-4e75-b681-5b706f1f3c2e" />
 
-You can check out [the Next.js GitHub repository](https://github.com/vercel/next.js) - your feedback and contributions are welcome!
+
+# SchedRx Admin Panel:
+<img width="1898" height="911" alt="Screenshot 2025-09-20 201644" src="https://github.com/user-attachments/assets/c0c6ed2f-bdf9-4052-b7f6-b60298764b8c" />
+
+# Doctor's Panel:
+<img width="1898" height="908" alt="Screenshot 2025-09-20 201845" src="https://github.com/user-attachments/assets/5922ae0b-df4f-4734-a98a-d0bd2f5b8bdf" />
+
+---
+
+# Credentials:
+
+- **ADMIN PANEL**  
+**Email:** leafylane@gmail.com  
+**Password:** leafylane@123
+
+
+
+
+
